--- a/index.html
+++ b/index.html
@@ -118,8 +118,11 @@
                 <input name="Comentario" type="text" placeholder="Comentario">
                 <input name="telefone" type="number" placeholder="Telefone">
 
-                <p><button id="botao1" type="submit">Vote</button>
+                
+                <p>
+                    <button id="botao1" type="submit">Vote</button>
                 </p>
+                
             </div>
 
 
